Add tests in InMemoryTaskManagerTest and HistoryManagerTest